# llm-npc

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  audio_capture.cpp  audio_capture.h  audio_playback.cpp  audio_playback.h  build.sh  npc_chat.cpp  npc_chat.h  npc_config.h  tts.cpp  voice_chat.cpp
piper1-gpl/libpiper/: CMakeLists.txt
piper1-gpl/libpiper/cmake/: patch_espeak_header.cmake
piper1-gpl/libpiper/include/: piper.h
piper1-gpl/libpiper/src/: piper.cpp  piper.def
